--- a/config/info.yml
+++ b/config/info.yml
@@ -1,12 +1,12 @@
 <% def env(a, b); e = ENV["obtvse_#{a}"]; e ? e : b; end %>
 
-title: <%= env :title,     'Blog Title' %>
-domain: <%= env :domain,   'http://www.example.com' %>
-name:    <%= env :name,    'Full Name' %>
-twitter: <%= env :twitter, 'handle' %>
-github:  <%= env :github,  'username'  %>
-email:   <%= env :email,   'email@example.com'  %>
-about:   <%= env :about,   'Example Tagline That is Longer.' %>
+title: <%= env :title,     'Codeventure Time' %>
+domain: <%= env :domain,   'http://www.wontaeyang.com' %>
+name:    <%= env :name,    'Wontae Yang' %>
+twitter: <%= env :twitter, 'wontae_yang' %>
+github:  <%= env :github,  'wontaeyang'  %>
+email:   <%= env :email,   'wontaeyang@gmail.com'  %>
+about:   <%= env :about,   'Full Stack Ruby Developer, Architect, Designer, Flatiron Grad, Robot, Data Nerd' %>
 
 # Google Analytics
 ga_id:   <%= env :ga,      ''  %>
